--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-fastapi==0.104.1
-python-dotenv==1.0.0
-requests==2.31.0
-uvicorn==0.24.0
+fastapi
+python-dotenv
+requests
+PyJWT
+SpeechRecognition
 sentence-transformers
 chromadb
+
